<resources>
    <string name="app_name">Star Wars</string>
    <string name="next">next</string>
    <string name="search_by_name">Search by name</string>
    <string name="people_of_star_wars">People of Star Wars</string>
    <string name="loading">Loading</string>
    <string name="failed_to_load_data">Failed to Load Data</string>
    <string name="from">%1$s from %2$s.</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_specie">Unknown Specie</string>
    <string name="general_information">General Information</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="vehicles">Vehicles</string>
    <string name="favorite">favorite</string>
    <string name="progress">progress</string>
</resources>